FEATURE: Core | Support renaming of device content correctly [Parg]
FEATURE: Core | Added a 'mark' feature to overall stats so you can count from a point in time as opposed to install date [Parg]
FEATURE: Core | Speed limit handler now supports profile specific network limits [Parg]
FEATURE: Core | Per-tag minimum share ration option [Parg]

CHANGE: UI    | Added roll-up ability for the 'Discovery' sidebar entry [TuxPaper]
CHANGE: UI    | Bring back sidebar popup menu [TuxPaper]
CHANGE: UI    | Removed unreliable/unsupported ping/tracert network tests [Parg]
CHANGE: UI    | Classic UI tab order memory added [Parg]
CHANGE: UI    | Moved search results and swarm discoveries to top of 'Discovery' entry [Parg]
CHANGE: UI    | Auto-hide devices that haven't been seen in a (configurable) time and alert when this happens [Parg]
CHANGE: UI    | Brazilian Portuguese translation update [Havokdan]
CHANGE: UI    | Basque translation update [Azpidatziak]
CHANGE: Plug  | Added serbian flags to location provider [Parg]
CHANGE: Core  | Improved performance of some averaging classes [Parg]
CHANGE: Core  | Major rework to file linking support [Parg]

BUGFIX: UI    | Fixed the min/max button shown for tab view [TuxPaper]
BUGFIX: UI    | Fixed some toolbar selection issues [TuxPaper]
BUGFIX: UI    | Fix last view not opening [TuxPaper]
BUGFIX: UI    | Better MDI entry/data source handling over restarts [TuxPaper]
BUGFIX: UI    | Hack for SWT icon transparency issue on Win 8 [Parg]
BUGFIX: UI    | DNS config section wiki link was broken [Parg]
BUGFIX: UI    | 'new' indicator wasn't being cleared for 'launch' actions [Parg]
BUGFIX: UI    | Fixed weird sort bug caused by sort occurring on hidden column [Parg]
BUGFIX: UI    | Fixed deadlock with authentication dialog [Parg]
BUGFIX: UI    | Fixed cell-specific cursor changes not working correctly [Parg]
BUGFIX: UI    | Newly added subscriptions were not showing correctly [Parg] 
BUGFIX: Plug  | Get the Twitter plugin working again [Parg]