@@ -4322,5 +4322,6 @@ min.sr.window.title=Minimum Share Ratio
 TableColumn.header.min_sr={min.sr.window.title}
 sidebar.show.options=Show the Options View as a sidebar entry rather than a separate window
 TorrentOptionsView.param.reset.stats=Reset torrent(s) transfer statistics to zero
+ConfigView.label.moveifsamedrive=But only do this when the source and destination are on different file systems
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
